--- a/.travis.yml
+++ b/.travis.yml
@@ -5,36 +5,36 @@ jobs:
     - stage: build 1
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-base-image pyiron-base/
+      - docker build -t $DOCKER_USERNAME/pyiron-base-image-beta pyiron-base/
       - docker images
-      - docker push $DOCKER_USERNAME/pyiron-base-image
-    - stage: build 2
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-lammps-image pyiron-lammps/
-      - docker images
-      - docker push $DOCKER_USERNAME/pyiron-lammps-image
-    - stage: build 3
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-sphinx-gpaw-image pyiron-sphinx-gpaw/
-      - docker images
-      - docker push $DOCKER_USERNAME/pyiron-sphinx-gpaw-image
-    - stage: build 4
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image pyiron-lammps-sphinx-gpaw/
-      - docker images
-      - docker push $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image
+      - docker push $DOCKER_USERNAME/pyiron-base-image-beta
+    # - stage: build 2
+    #   script:
+    #   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    #   - docker build -t $DOCKER_USERNAME/pyiron-lammps-image pyiron-lammps/
+    #   - docker images
+    #   - docker push $DOCKER_USERNAME/pyiron-lammps-image
+    # - stage: build 3
+    #   script:
+    #   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    #   - docker build -t $DOCKER_USERNAME/pyiron-sphinx-gpaw-image pyiron-sphinx-gpaw/
+    #   - docker images
+    #   - docker push $DOCKER_USERNAME/pyiron-sphinx-gpaw-image
+    # - stage: build 4
+    #   script:
+    #   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    #   - docker build -t $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image pyiron-lammps-sphinx-gpaw/
+    #   - docker images
+    #   - docker push $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image
     - stage: test1
-      script: docker run --rm $DOCKER_USERNAME/pyiron-base-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-base-image echo hello world
-    - stage: test2
-      script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
-    - stage: test3
-      script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
-    - stage: test4
-      script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
+      script: docker run --rm $DOCKER_USERNAME/pyiron-base-image-beta echo hello world
+    - script: docker run --rm $DOCKER_USERNAME/pyiron-base-image-beta echo hello world
+    # - stage: test2
+    #   script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
+    # - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
+    # - stage: test3
+    #   script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
+    # - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
+    # - stage: test4
+    #   script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
+    # - script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
