--- a/pyiron-base/Dockerfile
+++ b/pyiron-base/Dockerfile
@@ -8,23 +8,23 @@ USER root
 
 RUN userdel -r $NB_USER
 
-ARG NB_USER="pyiron_user"
-ARG NB_UID="1000"
+ARG PYIRON_USER="pyiron_user"
+ARG PYIRON_UID="1000"
 ARG NB_GID="100"
 
 
 # Configure environment
 ENV CONDA_DIR=/opt/conda \
     SHELL=/bin/bash \
-    NB_USER=$NB_USER \
-    NB_UID=$NB_UID \
+    PYIRON_USER=$PYIRON_USER \
+    PYIRON_UID=$PYIRON_UID \
     NB_GID=$NB_GID \
     LC_ALL=en_US.UTF-8 \
     LANG=en_US.UTF-8 \
     LANGUAGE=en_US.UTF-8
 
 ENV PATH=$CONDA_DIR/bin:$PATH \
-    HOME=/home/$NB_USER
+    HOME=/home/$PYIRON_USER
 
 # Copy a script that we will use to correct permissions after running certain commands
 #COPY fix-permissions /usr/local/bin/fix-permissions
@@ -35,41 +35,33 @@ ENV PATH=$CONDA_DIR/bin:$PATH \
 
 # Create NB_USER with name jovyan user with UID=1000 and in the 'users' group
 # and make sure these dirs are writable by the `users` group.
-RUN useradd -m -s /bin/bash -N -u $NB_UID $NB_USER && \
+RUN useradd -m -s /bin/bash -N -u $PYIRON_UID $PYIRON_USER && \
     #mkdir -p $CONDA_DIR && \
-    chown $NB_USER:$NB_GID $CONDA_DIR && \
+    chown $PYIRON_USER:$NB_GID $CONDA_DIR && \
     chmod g+w /etc/passwd && \
     fix-permissions $HOME && \
     fix-permissions $CONDA_DIR
 
 
-USER $NB_UID
+USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
+RUN conda install -c conda-forge pyiron_base
+
 # Setup work directory for backward-compatibility
-RUN fix-permissions /home/$NB_USER &&\
+RUN fix-permissions /home/$PYIRON_USER &&\
     fix-permissions $CONDA_DIR
 
 
-RUN conda install -c conda-forge pyiron_base && \
-
-EXPOSE 8888
-
-# Configure container startup
-ENTRYPOINT ["tini", "-g", "--"]
-CMD ["start-notebook.sh"]
-
-# Copy local files as late as possible to avoid cache busting
-
-RUN mkdir /home/$NB_USER/shared &&\
-    fix-permissions /home/$NB_USER/shared/
+RUN mkdir /home/$PYIRON_USER/shared &&\
+    fix-permissions /home/$PYIRON_USER/shared/
 
 # Fix permissions on /etc/jupyter as root
 USER root
 RUN fix-permissions /etc/jupyter/
 
 # Switch back to jovyan to avoid accidental container runs as root
-USER $NB_UID
+USER $PYIRON_UID
 
 WORKDIR $HOME
