removing jovyan home directory in pyiron-base

--- a/pyiron-base/Dockerfile
+++ b/pyiron-base/Dockerfile
@@ -6,14 +6,13 @@ MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
 
 USER root
 
-RUN userdel -r $NB_USER
+#removing the default user and the corresponding home directory.
+RUN userdel -r $NB_USER && \
+    rm -r /home/$NB_USER
 
-ARG PYIRON_USER="pyiron_user"
+ARG PYIRON_USER="pyiron"
 ARG PYIRON_UID="1000"
 ARG NB_GID="100"
-
-COPY fix-permissions /usr/local/bin/fix-permissions
-RUN chmod a+rx /usr/local/bin/fix-permissions
 
 # Configure environment
 ENV CONDA_DIR=/opt/conda \
@@ -25,18 +24,9 @@ ENV CONDA_DIR=/opt/conda \
     LANG=en_US.UTF-8 \
     LANGUAGE=en_US.UTF-8
 
-ENV PATH=$CONDA_DIR/bin:$PATH \
-    HOME=/home/$PYIRON_USER
+ENV HOME=/home/$PYIRON_USER
 
-# Copy a script that we will use to correct permissions after running certain commands
-#COPY fix-permissions /usr/local/bin/fix-permissions
-#RUN chmod a+rx /usr/local/bin/fix-permissions
-
-# Enable prompt color in the skeleton .bashrc before creating the default NB_USER
-#RUN sed -i 's/^#force_color_prompt=yes/force_color_prompt=yes/' /etc/skel/.bashrc
-
-# Create NB_USER with name jovyan user with UID=1000 and in the 'users' group
-# and make sure these dirs are writable by the `users` group.
+# creating account for pyiron_user.
 RUN useradd -m -s /bin/bash -N -u $PYIRON_UID $PYIRON_USER && \
     #mkdir -p $CONDA_DIR && \
     chown $PYIRON_USER:$NB_GID $CONDA_DIR && \
