adding today date to the image tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ jobs:
     - stage: build 1
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-base-image-beta pyiron-base/
+      - docker build -t $DOCKER_USERNAME/pyiron-base-image-beta:latest pyiron-base/
       - docker images
-      - docker push $DOCKER_USERNAME/pyiron-base-image-beta
+      - docker push $DOCKER_USERNAME/pyiron-base-image-beta:latest
+      - today= date +%F
+      - docker tag $DOCKER_USERNAME/pyiron-base-image-beta:latest $DOCKER_USERNAME/pyiron-base-image-beta:$today
+      - docker push $DOCKER_USERNAME/pyiron-base-image-beta:$today
     # - stage: build 2
     #   script:
     #   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
