correction to pyiron-base Dockerfile

--- a/pyiron-base/Dockerfile
+++ b/pyiron-base/Dockerfile
@@ -40,7 +40,7 @@ USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
-RUN conda install -c conda-forge pyiron_base
+RUN conda install -c conda-forge pyiron_base &&\
     conda clean --all -f -y && \
     npm cache clean --force && \
     fix-permissions /home/$PYIRON_USER &&\
