--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -39,8 +39,8 @@ USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
-RUN conda install -y -c conda-forge pyiron &&\
-    conda install -y -c conda-forge nglview &&\
+RUN conda install -y --quiet -c conda-forge pyiron &&\
+    conda install -y --quiet -c conda-forge nglview &&\
     jupyter nbextension install nglview --py --sys-prefix &&\
     jupyter nbextension enable nglview --py --sys-prefix &&\
     conda clean --all -f -y && \
