--- a/.travis.yml
+++ b/.travis.yml
@@ -23,30 +23,30 @@ jobs:
     - stage: build 3
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-lammps-image pyiron-lammps/
+      - docker build -t $DOCKER_USERNAME/pyiron-md-image pyiron-md/
       - docker images
-      - docker push $DOCKER_USERNAME/pyiron-lammps-image
+      - docker push $DOCKER_USERNAME/pyiron-md-image
       - export TODAY=$(date +%F)
-      - docker tag $DOCKER_USERNAME/pyiron-lammps-image:latest $DOCKER_USERNAME/pyiron-lammps-image:"$TODAY"
-      - docker push $DOCKER_USERNAME/pyiron-lammps-image:"$TODAY"
+      - docker tag $DOCKER_USERNAME/pyiron-md-image:latest $DOCKER_USERNAME/pyiron-md-image:"$TODAY"
+      - docker push $DOCKER_USERNAME/pyiron-md-image:"$TODAY"
     - stage: build 4
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-sphinx-gpaw-image pyiron-sphinx-gpaw/
+      - docker build -t $DOCKER_USERNAME/pyiron-sphinx-image pyiron-sphinxdft/
       - docker images
-      - docker push $DOCKER_USERNAME/pyiron-sphinx-gpaw-image
+      - docker push $DOCKER_USERNAME/pyiron-sphinx-image
       - export TODAY=$(date +%F)
-      - docker tag $DOCKER_USERNAME/pyiron-sphinx-gpaw-image:latest $DOCKER_USERNAME/pyiron-sphinx-gpaw-image:"$TODAY"
-      - docker push $DOCKER_USERNAME/pyiron-sphinx-gpaw-image:"$TODAY"
+      - docker tag $DOCKER_USERNAME/pyiron-sphinx-image:latest $DOCKER_USERNAME/pyiron-sphinx-image:"$TODAY"
+      - docker push $DOCKER_USERNAME/pyiron-sphinx-image:"$TODAY"
     - stage: build 5
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image pyiron-lammps-sphinx-gpaw/
+      - docker build -t $DOCKER_USERNAME/pyiron-dft-image pyiron-dft/
       - docker images
-      - docker push $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image
+      - docker push $DOCKER_USERNAME/pyiron-dft-image
       - export TODAY=$(date +%F)
-      - docker tag $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image:latest $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image:"$TODAY"
-      - docker push $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image:"$TODAY"
+      - docker tag $DOCKER_USERNAME/pyiron-dft-image:latest $DOCKER_USERNAME/pyiron-dft-image:"$TODAY"
+      - docker push $DOCKER_USERNAME/pyiron-dft-image:"$TODAY"
     - stage: test1
       script: docker run --rm $DOCKER_USERNAME/pyiron-base-image echo hello world
     - script: docker run --rm $DOCKER_USERNAME/pyiron-base-image echo hello world
@@ -54,11 +54,11 @@ jobs:
       script: docker run --rm $DOCKER_USERNAME/pyiron-image echo hello world
     - script: docker run --rm $DOCKER_USERNAME/pyiron-image echo hello world
     - stage: test3
-      script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-image echo hello world
+      script: docker run --rm $DOCKER_USERNAME/pyiron-md-image echo hello world
+    - script: docker run --rm $DOCKER_USERNAME/pyiron-md-image echo hello world
     - stage: test4
-      script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-gpaw-image echo hello world
+      script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-image echo hello world
+    - script: docker run --rm $DOCKER_USERNAME/pyiron-sphinx-image echo hello world
     - stage: test5
-      script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
-    - script: docker run --rm $DOCKER_USERNAME/pyiron-lammps-sphinx-gpaw-image echo hello world
+      script: docker run --rm $DOCKER_USERNAME/pyiron-dft-image echo hello world
+    - script: docker run --rm $DOCKER_USERNAME/pyiron-dft-image echo hello world
