--- a/pyiron-dft/Dockerfile
+++ b/pyiron-dft/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=muhhassani/pyiron-image:latest
+ARG ROOT_CONTAINER=muhhassani/pyiron-base-image:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
@@ -8,7 +8,9 @@ USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
-RUN conda install --quiet -y -c conda-forge lammps &&\
+COPY environment.yml ${HOME}/
+#RUN conda install --quiet -y -c conda-forge lammps &&\
+RUN conda env update -n base -f ${HOME}/environment.yml && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     fix-permissions /home/$PYIRON_USER &&\
