adding --prune option

--- a/pyiron-base/Dockerfile
+++ b/pyiron-base/Dockerfile
@@ -41,7 +41,7 @@ ARG PYTHON_VERSION=default
 
 COPY environment.yml ${HOME}/
 #RUN conda install --quiet -y -c conda-forge lammps &&\
-RUN conda env update -n base -f ${HOME}/environment.yml && \
+RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     fix-permissions /home/$PYIRON_USER &&\
