--- a/pyiron-sphinxdft/environment.yml
+++ b/pyiron-sphinxdft/environment.yml
@@ -1,11 +1,11 @@
 channels:
 - conda-forge
 dependencies:
-- python
-- jupyter
-- jupyterhub
-- jupyterlab
-- notebook
-- pyiron
+# - python
+# - jupyter
+# - jupyterhub
+# - jupyterlab
+# - notebook
+#- pyiron
 - sphinxdft
-- nglview
+#- nglview
