--- a/pyiron/environment.yml
+++ b/pyiron/environment.yml
@@ -1,13 +1,13 @@
 channels:
 - conda-forge
 dependencies:
-- python
-- jupyter
-- jupyterhub
-- jupyterlab
-- notebook
-- pyiron
+# - python
+# - jupyter
+# - jupyterhub
+# - jupyterlab
+# - notebook
+#- pyiron
 - lammps
 - sphinxdft
 - gpaw
-- nglview
+#- nglview
