--- a/pyiron-base/Dockerfile
+++ b/pyiron-base/Dockerfile
@@ -45,12 +45,11 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY environment.yml ${HOME}/
-#RUN conda install --quiet -y -c conda-forge lammps &&\
 RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
-    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build && \
-    jupyter labextension install nglview-js-widgets && \
-    jupyter nbextension install nglview --py --sys-prefix && \
-    jupyter nbextension enable nglview --py --sys-prefix && \
+#    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build && \
+#    jupyter labextension install nglview-js-widgets && \
+   jupyter nbextension install nglview --py --sys-prefix && \
+   jupyter nbextension enable nglview --py --sys-prefix && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     fix-permissions /home/$PYIRON_USER &&\
