notebooks addition and lab extention

--- a/pyiron-atomistic/Dockerfile
+++ b/pyiron-atomistic/Dockerfile
@@ -44,14 +44,22 @@ USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
-COPY environment.yml ${HOME}/
+COPY . ${HOME}/
 RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
+    jupyter nbextension install nglview --py --sys-prefix && \
+    jupyter nbextension enable nglview --py --sys-prefix && \
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build && \
+    jupyter labextension install nglview-js-widgets && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     jlpm cache clean && \ 
     jupyter lab clean && \
     fix-permissions /home/$PYIRON_USER &&\
     fix-permissions $CONDA_DIR
+
+RUN chmod +x ${HOME}/include_notebooks.sh && \
+    /bin/bash include_notebooks.sh &&\
+    rm *
 
 # Fix permissions on /etc/jupyter as root
 USER root
