--- a/pyiron-md/Dockerfile
+++ b/pyiron-md/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=muhhassani/pyiron-base-image:latest
+ARG ROOT_CONTAINER=muhhassani/pyiron-atomistic-image:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
@@ -8,13 +8,17 @@ USER $PYIRON_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
-COPY environment.yml ${HOME}/
+COPY . ${HOME}/
 #RUN conda install --quiet -y -c conda-forge lammps &&\
 RUN conda env update -n base -f ${HOME}/environment.yml && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     fix-permissions /home/$PYIRON_USER &&\
     fix-permissions $CONDA_DIR
+
+RUN chmod +x ${HOME}/include_notebooks.sh && \
+    /bin/bash include_notebooks.sh &&\
+    rm *
 
 # Fix permissions on /etc/jupyter as root
 USER root
