--- a/pyiron-dft/Dockerfile
+++ b/pyiron-dft/Dockerfile
@@ -11,16 +11,17 @@ ARG PYTHON_VERSION=default
 COPY . ${HOME}/
 RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
     conda clean --all -f -y && \
-    npm cache clean --force && \
-    fix-permissions /home/$PYIRON_USER &&\
-    fix-permissions $CONDA_DIR
+    npm cache clean --force 
     
-RUN chmod +x ${HOME}/include_notebooks.sh && \
+USER root
+RUN fix-permissions /home/$PYIRON_USER &&\
+    fix-permissions $CONDA_DIR && \
+    chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
-    rm *
+    rm ${HOME}/* && \
+    fix-permissions /home/$PYIRON_USER
 
 # Fix permissions on /etc/jupyter as root
-USER root
 RUN fix-permissions /etc/jupyter/
 
 # Switch back to pyiron to avoid accidental container runs as root
