--- a/pyiron-dft/Dockerfile
+++ b/pyiron-dft/Dockerfile
@@ -18,7 +18,10 @@ RUN fix-permissions /home/$PYIRON_USER &&\
     fix-permissions $CONDA_DIR && \
     chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
-    rm ${HOME}/* && \
+    rm ${HOME}/*.yml && \
+    rm ${HOME}/Dockerfile && \
+    rm ${HOME}/exclude && \
+    rm ${HOME}/*.sh && \
     fix-permissions /home/$PYIRON_USER
 
 # Fix permissions on /etc/jupyter as root
