removing apt.txt, adding a dockerfile for mybiner

--- a/pyiron-atomistic/Dockerfile
+++ b/pyiron-atomistic/Dockerfile
@@ -64,6 +64,7 @@ RUN fix-permissions /home/$PYIRON_USER &&\
     rm ${HOME}/Dockerfile && \
     rm ${HOME}/exclude && \
     rm ${HOME}/*.sh && \
+    rm ${HOME}/apt.txt && \
     fix-permissions /home/$PYIRON_USER
 
 # Fix permissions on /etc/jupyter as root
