--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -9,7 +9,6 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-#RUN conda install --quiet -y -c conda-forge lammps &&\
 RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
     conda clean --all -f -y && \
     npm cache clean --force
@@ -19,11 +18,8 @@ RUN fix-permissions /home/$PYIRON_USER &&\
     fix-permissions $CONDA_DIR && \
     chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
-    rm ${HOME}/*.yml && \
-    rm ${HOME}/Dockerfile && \
-    rm ${HOME}/exclude && \
-    rm ${HOME}/*.sh && \
-    fix-permissions /home/$PYIRON_USER
+    fix-permissions /home/$PYIRON_USER && \
+    chown -R ${PYIRON_USER}:${NB_GID} ${HOME}/notebooks
 
 RUN fix-permissions /etc/jupyter/
 # Switch back to pyiron to avoid accidental container runs as root
